--- a/index.html
+++ b/index.html
@@ -1,11 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-School</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="img/Logo.png" class="nav-logo" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link nav-list" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  nav-list" href="#">Books</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  nav-list" href="#">Course</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  nav-list" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="Sign-up" href="#">Sign-Up</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <section class="container my-5" id="banner">
+            <div>
+                <div class="row align-items-center justify-content-around">
+                    <div class="col-7 hadding">
+                        <p class="text-danger">Are you rady to Learn?</p>
+                        <h1>Learn With Fun <br>
+                            on <span>any schedule</span></h1>
+                        <p class="w-75">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, libero
+                            praesentium
+                            consequuntur dicta nemo consectetur ea assumenda neque inventore deserunt, quas corrupti
+                            maxime repudiandae, quod ullam velit non quisquam dolore. Porro, temporibus. Nisi autem qui
+                            modi in, impedit tempora reprehenderit.</p>
+                        <button class="btn btn-dark">GET STARTED</button>
+                    </div>
+                    <div class="col-5">
+                        <img src="img/Illustration.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </header>
+    <main>
+        <section class="container">
+            <div class="card-group">
+                <div class="card align-items-center justify-content-around pt-3 m-3" id="chart">
+                    <img src="img/book.png" class="card-img-top w-25" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1500+ Topic</h5>
+                        <p class="card-text text-center">Learn Anytings</p>
+                    </div>
+                </div>
+                <div class="card align-items-center justify-content-around  pt-3 m-3 " id="chart2">
+                    <img src="img/Student.png" class="card-img-top w-25" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1800+ Students</h5>
+                        <p class="card-text text-center">Learn Anyting</p>
+                    </div>
+                </div>
+                <div class="card align-items-center justify-content-around pt-3 m-3 " id="chart">
+                    <img src="img/Students.png" class="card-img-top w-25" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">9000+ Test Token</h5>
+                        <p class="card-text text-center">Learn Anytings</p>
+                    </div>
+                </div>
+                <div class="card align-items-center justify-content-center pt-3 m-3" id="chart">
+                    <img src="img/Test.png" class="card-img-top w-25" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">2000+ Site</h5>
+                        <p class="card-text">Learn Anytings</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mt-5">
+            <h1 class="text-center">Online Courses</h1>
+            <div class="card-group">
+                <div class="card  p-3 m-3" id="course-body">
+                    <div class="course-img">
+                        <img src="img/Morder psyc.png" class="card-img-top w-75" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Morder pyschology</h5>
+                        <p class="card-text">Disignation</p>
+                        <button class="btn btn-dark">Buy Course</button>
+                    </div>
+                    <div class="seat d-flex">
+                        <p><img src="img/calendar.png" class="" alt="">Start 20 April,2021</p>
+                        <p class="px-5"><img src="img/people.png" alt=""> 60 Seats</p>
+                    </div>
+                </div>
+                <div class="card  p-3 m-3" id="course-body">
+                    <div class="course-img">
+                        <img src="img/Morder pychons.png" class="card-img-top w-75" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Morder psyc</h5>
+                        <p class="card-text">Disignation</p>
+                        <button class="btn btn-dark">Buy Course</button>
+                    </div>
+                    <div class="seat d-flex">
+                        <p><img src="img/calendar.png" class="" alt="">Start 20 April,2021</p>
+                        <p class="px-5"><img src="img/people.png" alt=""> 60 Seats</p>
+                    </div>
+                </div>
+                <div class="card p-3 m-3" id="course-body">
+                    <div class="course-img">
+                        <img src="img/Morder pyschology.png" class="card-img-top w-75" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-left">Morder pychons</h5>
+                        <p class="card-text">Disignation</p>
+                        <button class="btn btn-dark">Buy Course</button>
+                    </div>
+                    <div class="seat d-flex">
+                        <p><img src="img/calendar.png" class="" alt="">Start 20 April,2021</p>
+                        <p class="px-5"><img src="img/people.png" alt=""> 60 Seats</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class='container mt-5'>
+            <h1 class="text-center my-5">Testimonial</h1>
+            <div class=" row align-items-center justify-content-center px-4">
+                <div class="col-4">
+                    <div class="text-center">
+                        <img src="img/Man.png" class="w-50 py-3" alt="">
+                        <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui vel reprehenderit,
+                            dolor quos culpa numquam doloribus voluptatum? Sequi inventore voluptate adipisci
+                            dignissimos modi consequuntur aliquam. Debitis sapiente odit quidem architecto!</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="text-center">
+                        <img src="img/Man.png" class="w-50 py-3" alt="">
+                        <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui vel reprehenderit,
+                            dolor quos culpa numquam doloribus voluptatum? Sequi inventore voluptate adipisci
+                            dignissimos modi consequuntur aliquam. Debitis sapiente odit quidem architecto!</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="text-center">
+                        <img src="img/Man.png" class="w-50 py-3" alt="">
+                        <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui vel reprehenderit,
+                            dolor quos culpa numquam doloribus voluptatum? Sequi inventore voluptate adipisci
+                            dignissimos modi consequuntur aliquam. Debitis sapiente odit quidem architecto!</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+    </main>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
